kubernetes/o11y/api-gateway-o11y/loki-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: loki.hq.kronops.io
    cert-manager.io/cluster-issuer: kronops-o11y-intermediate-ca1-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - loki.hq.kronops.io
      secretName: lgtm-loki-tls  # pragma: allowlist secret
  rules:
    - host: loki.hq.kronops.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lgtm-loki
                port:
                  number: 3100
