kubernetes/o11y/api-gateway-o11y/tempo-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-ingest
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tempo.hq.kronops.io
    cert-manager.io/cluster-issuer: kronops-o11y-intermediate-ca1-issuer
    nginx.ingress.kubernetes.io/client-body-buffer-size: 25m
    nginx.ingress.kubernetes.io/proxy-body-size: 25m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tempo.hq.kronops.io
      secretName: lgtm-tempo-tls  # pragma: allowlist secret
  rules:
    - host: tempo.hq.kronops.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lgtm-tempo
                port:
                  number: 4318
